// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton should render default correctly 1`] = `
<div class="fx-skeleton">
  <div class="fx-skeleton_layout">
    <!---->
    <div class="fx-skeleton_layout-right">
      <div class="fx-skeleton-title"></div>
      <ul class="fx-skeleton-paragraph">
        <li></li>
        <li></li>
        <li></li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Skeleton should render prop avatar=true correctly 1`] = `
<div class="fx-skeleton">
  <div class="fx-skeleton_layout">
    <div class="fx-skeleton_layout-left">
      <div class="fx-skeleton-avatar shape--default"></div>
    </div>
    <div class="fx-skeleton_layout-right">
      <div class="fx-skeleton-title"></div>
      <ul class="fx-skeleton-paragraph">
        <li></li>
        <li></li>
        <li></li>
      </ul>
    </div>
  </div>
</div>
`;
